feat: new X-Road 8 theme
add additional references to parent entities to ease UI dev

Refs: XRDDEV-2904
